# af2genomics

./: .gitignore  README.md  pyproject.toml  sbatch-af2genomics  setup.py
af2genomics/: Corsello2017.py  DepMap.py  PRISM.py  __init__.py  alphafold3.py  common.py  core.py  foldx.py  huintaf2.py  ligands.py  metrics.py  missense_human.py  missense_yeast.py
envs/: README.md  af2genomics.yaml
examples/esm-variants/: esm-variants.ipynb
examples/eu-cluster/: eu-sstats.ipynb  nvidia-smi.ipynb  transfers.ipynb
examples/foldseek_interface/: foldseek_euler.ipynb
examples/geneid_conversion/: geneid_conversion.ipynb
examples/lip_peptides_pockets/: distance_to_pocket.ipynb
examples/missense/: missense.ipynb  missense_human.ipynb  missense_yeast.ipynb
examples/multimer_ifresid/: multimer_ifresid.ipynb
examples/mutfunc_db/: mutfunc_db.ipynb  mutfunc_db.slurm  mutfunc_db.stderr.txt
examples/openfold/: OpenProteinSet.ipynb  openfold-run-monomer.ipynb  openfold-run-multimer.ipynb  openfold-run-multimer.nbconvert.ipynb  openfold-run-multimer.slurm
examples/qr_code/: qr_code.ipynb
examples/share_permissions/: share_permissions.ipynb
notebooks/: __init__.ipynb
results/human/: af2_rsync.ipynb  (+3 more)
scripts/: pdb_trim_bf.py
software/: DiffDock.ipynb  README.md  code-server-cpu  code-server-cpu.sbatch  code-server-gpu  code-server-gpu.sbatch  code-server-ssh.sh  code-server.slurm  openfold-install.ipynb  openfold-setup.slurm  openfold-setup.stderr.txt  openfold-setup.stdout.txt
src/: af2genomics.py
workflow/: Snakefile  Snakefile-yeast.sbatch  Snakefile-yeast.smk
(+71 files in other folders)
