[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "af2genomics"
version = "24-dev"
authors = [
  { name="jurgjn", email="jurgjn@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jurgjn/af2genomics"
Issues = "https://github.com/jurgjn/af2genomics/issues"
